--- a/compete.toml
+++ b/compete.toml
@@ -60,9 +60,22 @@ content = '''
 [new.template.src]
 kind = "inline"
 content = '''
+use proconio::input;
+
 fn main() {
-    todo!();
+    input! {
+        a: i32,
+        b: i32,
+    }
+
+    let index = a % k;
+    if a + index <= b {
+        println!("OK");
+    } else if a + index {
+
+    }
 }
+
 '''
 
 # for Library-Checker
